Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-53722

WinRT: Switching cameras on W10Mobile can cause application to crash

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.6.2, 5.7.1
    • 5.6.1
    • Multimedia
    • None
    • MSVC2015
    • WinRT
    • bff19dbe6733d245adc2daf79fe3bab017abb1e2

    Description

      Switching the camera on the Lumia 930 multiple times can cause the application to hang and/or crash/assert.

      On desktop this is harder to reproduce, hence this is most likely a synchronization/threading issue.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mkalinow Maurice Kalinowski
            mkalinow Maurice Kalinowski
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes